--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
       
       <header>
         <div>
+          <br>
           <h3>DESPENSA Y FIAMBRERÍA</h3>
         </div>
       </header>
       <div class="navbar">
         <div>
+          <span>Buscar producto --></span>
           <a href="#/pagina0" type="button" class="btn btnNav">
-            Ver productos
+            Por categoría
           </a>
           <a href="#/pagina1" type="button" class="btn btnNav">
-            Buscar producto
+            Por nombre
           </a>
         </div>
         
