--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           </a>
         </div>
         
-        <div   class="linksNav">
-          <div id="linksNav">
+        <div class="linksNav">
+          <div id="log">
 
           </div>
           <button type="button" class="btn btnNav" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
@@ -108,6 +108,7 @@
         <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.0/build/global/luxon.min.js"></script>
         <script src="js/globales.js"></script>
         <script src="js/productos.js"></script>
+        <script src="js/usuarios.js"></script>
         <script src="js/funciones.js"></script>
         <script src="js/main.js"></script>
         
