--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header>
         <div>
           <br>
-          <h3>DESPENSA Y FIAMBRERÍA</h3>
+          <h3>CASA DE MUSICA</h3>
         </div>
       </header>
       <div class="navbar">
